using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public class Utils : MonoBehaviour
{
    public const string H_AXIS = "Horizontal", V_AXIS = "Vertical";
    public const string LV = "LastV", LH ="LastH";

    public const string WALK = "isWalking";
    public const string ATT = "isAttacking";
}
